--- a/client/src/index.css
+++ b/client/src/index.css
@@ -51,9 +51,9 @@ html {
   @apply w-full bg-transparent text-sm border border-gray-300 p-2 outline-none flex-1;
 }
 
-.filepicker-container {
+/* .filepicker-container {
   @apply absolute left-full ml-3 glassmorphism p-3 w-[195px] h-[220px] flex flex-col rounded-md;
-}
+} */
 
 .filepicker-label {
   @apply border border-gray-300 py-1.5 px-2 rounded-md shadow-sm text-xs text-gray-700 focus:outline-none focus:ring-1 focus:ring-blue-500 focus:border-blue-500 cursor-pointer w-fit;
